[package]
name = "create-bitcoin-address"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "=0.8.5"
secp256k1 = "=0.24.0"
bitcoin = "=0.29.1"
sha256 = "=1.0.3"
create-bitcoin-private-key = { git = "https://github.com/joegesualdo/create-bitcoin-private-key", rev = "8de0e1cc99ed41293571eba9c32de24f77dfd6c1" }
